# AI.EXE

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  RUN_MAC_PREVIEW.command  design-qa.md  package-lock.json  package.json  rollup.codemirror.config.mjs  setup_model.bat  start.command
.cache/clangd/index/: app_config.h.A54E1AB34E048546.idx  diagnostics.cpp.C2A71EBFA12661A9.idx  diagnostics.h.63E1CF96576B9C8E.idx  gui_main_mac_web.mm.B6C0A29999BD4F13.idx  infer_backend_stub.cpp.DCF0B60786D3DDD4.idx  inference_engine.cpp.3E6AF2A991A26CB7.idx  inference_engine.h.B19F5564E6DBDE73.idx  logger.cpp.EC49ECBC5DD2674B.idx  logger.h.80578C878DDC2339.idx  main.cpp.E460996E549D802B.idx  memory_store.cpp.B85991874854ED24.idx  memory_store.h.FBBFF047743E8DC4.idx  process_runner.cpp.E6B75BCBB5823DAD.idx  process_runner.h.9722116D5490A038.idx  rollback.cpp.E243A8F10CDF3587.idx  rollback.h.9C620175EE3E6AD5.idx  sandbox.cpp.A83390EA1B3564D7.idx  sandbox.h.51B86D5CE4A20250.idx  web_runtime_bridge.cpp.A9059B6A7344508A.idx  web_runtime_bridge.h.8BCE21216AE6868A.idx
.github/workflows/: build-windows.yml
backend/: ACCEPTANCE.md  README.md  launcher.py  requirements.txt  run.sh
backend/app/: __init__.py  adapter.py  adapter_boot.py  codeparse.py  config.py  deps.py  finance.py  generate.py  llm.py  main.py  models.py  modules.py  packager.py  pdf.py  pdf_pipeline.py  projects.py  provider.py  provider_usage.py  sandbox.py  services.py  usage.py  venice_adapter_server.py  venice_config.py
backend/app/routers/: __init__.py  adapter.py  finance.py  generate.py  health.py  modules.py  package.py  pdf.py  projects.py  run.py  status.py  usage.py  workshop.py
backend/tests/: run_all.py  smoke_adapter.py  smoke_codeparse.py  smoke_finance.py  smoke_generate.py  smoke_modules.py  smoke_packager.py  smoke_pdf.py  smoke_projects.py  smoke_provider.py  smoke_provider_usage.py  smoke_sandbox.py  smoke_usage.py
backend/tools/: check_parent_watch.py
docs/: AI_EXE_Requirements_extracted.txt  AI_EXE_Revised_extracted.txt  ARCHITECTURE.md  BACKLOG.md  DECISION_AUTHORITY.md  DEPLOYMENT.md  FINANCIAL_AUTOMATION_REQUIREMENTS.md  PLANNER_MODEL_SETUP.md  PROJECT_MEMORY.md  STRESS_TEST.md  TERMINAL_AGENT_INTEGRATION.md
scripts/: agent_activity_subgroup_state_test.js  agent_change_grounding_test.js  agent_checklist_test.js  agent_command_approval_ui_static_test.js  agent_completion_text_test.js  agent_const_reassign_test.js  agent_decision_parse_test.js  agent_edit_preview_aggregate_test.js  agent_edit_preview_persistence_test.js  agent_foundation_vocab_test.js  agent_fuzzy_edit_test.js  agent_fuzzy_heal_test.js  agent_inference_failure_resume_static_test.js  agent_multipage_validate_test.js  agent_phase_live_progress_test.js  agent_plan_classification_test.js  agent_plan_update_ui_static_test.js  agent_planner_diagnostics_test.js  agent_retry_context_test.js  agent_rewrite_persist_guard_static_test.js  agent_run_events_static_test.js  agent_runtime_repair_budget_static_test.js  agent_stack_proof_planner_test.js  agent_terminal_command_state_test.js  agent_tool_group_consistency_static_test.js  agent_unicode_search_test.js  agent_validation_advisory_test.js  agent_vite_run_app_test.js  agent_write_file_repair_test.js  approval_cancel_interrupted_static_test.js  approval_waiting_ui_static_test.js  artifact_code_width_static_test.js  attachment_image_persistence_static_test.js  chat_delete_persistence_static_test.js  chat_external_link_test.js  chat_final_reply_quota_persistence_test.js  chat_prompt_mode_test.js  composer_overflow_dynamic_static_test.js  confirmation_flow_static_test.js  conversation_memory_static_test.js  (+26 more)
src/: AppIcon.icns  Info.plist.in  app.rc  app_config.h  command_runner.h  dev_server_manager.h  diagnostics.cpp  diagnostics.h  gui_main_mac.mm  gui_main_mac_web.mm  gui_main_win.cpp  gui_main_win_webview.cpp  infer_backend_stub.cpp  inference_engine.cpp  inference_engine.h  local_app_server.cpp  local_app_server.h  logger.cpp  logger.h  main.cpp  memory_store.cpp  memory_store.h  process_runner.cpp  process_runner.h  rollback.cpp  rollback.h  run_target.h  sandbox.cpp  sandbox.h  ui_constants.h.in  web_runtime_bridge.cpp  web_runtime_bridge.h
ui/: agent-ai-loop.js  agent-core.js  agent-events.js  agent-executor.js  agent-loop.js  agent-planner.js  agent-runtime.js  ai-exe.css  ai-exe.html  ai-exe.js  chat-renderer.js  chat-shell.js  file-viewer.js  markdown-renderer.js  preflight-router.js  prompt-core.js  ui-config.js.in  workshop.html  workspace-actions.js  workspace-core.js  workspace-renderer.js
ui/prompts/: chat_main.md  design_guide.md  design_guide_brief.md  developer_agent_completion.md  developer_agent_decision.md  developer_agent_decision_repair.md  developer_agent_edit_file.md  developer_agent_plan.md  developer_agent_rewrite_file.md  developer_agent_write_file.md
